--- a/prettyThingsAndHowTheyWork/web dev/this is for you/index.html
+++ b/prettyThingsAndHowTheyWork/web dev/this is for you/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pretty things in small doses. even you.</title>
-    <link rel="stylesheet" href="/connecting-neurons/prettyThings/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <div>
             <h1 onClick="playVid()" class="title"><a href="">this is for <span>y<span>ou</span></span>.</a></h1>
         </div>
-        <video class="vid" src="/connecting-neurons/prettyThings/assets/images/for you.mp4"></video>
+        <video class="vid" src="/assets/images/for you.mp4"></video>
     </main>
 </body>
 
@@ -22,7 +22,7 @@
         <li><a class="insta" href="https://www.instagram.com/nom.de.d__u/" target="_blank" rel="noopener noreferrer"></a></li> <!--onclick="window.open('#','_blank');window.open(this.href,'_self');" this code should open link in another tab but stay on same page (reloads OG page though)-->
         <li><a href="">elsie.jpeg@gmail.com</a></li>
     </ul>
-    <object class="svg" data="/connecting-neurons/prettyThings/assets/images/pdQEGz01.svg" width="150" height="150"></object>
+    <object class="svg" data="/assets/images/pdQEGz01.svg" width="150" height="150"></object>
 </footer>
 
 <script>
