--- a/prettyThingsAndHowTheyWork (web)/web dev/this is for you/index.html
+++ b/prettyThingsAndHowTheyWork (web)/web dev/this is for you/index.html
@@ -19,10 +19,10 @@
 
 <footer>
     <ul class="foot">
-        <li><a class="insta" href="https://www.instagram.com/nom.de.d__u/" target="_blank" rel="noopener noreferrer"></a></li> <!--onclick="window.open('#','_blank');window.open(this.href,'_self');" this code should open link in another tab but stay on same page (reloads OG page though)-->
+        <li><a class="insta" href="https://www.instagram.com/_communique/" target="_blank" rel="noopener noreferrer" onclick="window.open('#','_blank');window.open(this.href,'_self');"></a></li> <!--onclick="window.open('#','_blank');window.open(this.href,'_self');" this code should open link in another tab but stay on same page (reloads OG page though)-->
         <li><a href="">elsie.jpeg@gmail.com</a></li>
     </ul>
-    <object class="svg" data="/assets/images/pdQEGz01.svg" width="150" height="150"></object>
+    <object class="svg" data="/assets/images/pdQEGz01.svg" width="150" height="150" onclick="window.open('#','_blank');window.open(this.href,'_self');"></object>
 </footer>
 
 <script>
